Fix workspace consistency for shared daemon sessions (#99)
* fix(workspace): enforce session project consistency across cli/daemon

* fix(daemon): scope core file/shell tools to session project

* fix(hooks): execute commands in event cwd

* test(workspace): add multi-project daemon isolation regression

* fix(daemon): address remaining workspace review comments

---------

Co-authored-by: Xinhua Gu <xinhua.gu@arz.at>